# RecoilEngine

./: .gitignore  .gitmodules
.github/workflows/: check-lua.yml  generate-lua-library.yml
cont/: luaui.lua
cont/LuaUI/: debug.lua  fonts.lua  layout.lua  main.lua  selector.lua  tweakmode.lua  utils.lua  widgets.lua
doc/site/: .dockerignore  Dockerfile  mise.toml
docker-build-v2/: README.md  build.sh
examples/: lua2cpp_example.lua  lua2cpp_output.cpp
prompts/team_transfer/: cursor_review_prs_and_plan_contentious.md  functional_breakdown.md  generate_diffs.zsh  qa_plan.md  team_change_reason_handlers_prompt.md
rts/ExternalAI/: AICallback.h
rts/Game/: Game.cpp  SyncedGameCommands.cpp  UnsyncedGameCommands.cpp
rts/Lua/: CMakeLists.txt  LuaConstCMD.cpp  LuaConstGL.cpp  LuaConstGame.cpp  LuaConstPolicyType.cpp  LuaConstPolicyType.h  LuaFonts.cpp  LuaHandle.cpp  LuaHandle.h  LuaHandleSynced.cpp  LuaHandleSynced.h  LuaIntro.cpp  LuaMenu.cpp  LuaMetalMap.cpp  LuaObjectRendering.cpp  LuaOpenGL.cpp  LuaParser.cpp  LuaPathFinder.cpp  LuaPolicyCache.cpp  LuaPolicyCache.h  LuaRules.cpp  LuaScream.h  LuaShaders.cpp  LuaSpringContext.cpp  LuaSpringContext.h  LuaSyncedCtrl.cpp  LuaSyncedCtrl.h  LuaSyncedMoveCtrl.cpp  LuaSyncedRead.cpp  LuaSyncedRead.h  LuaUI.cpp  LuaUnsyncedCtrl.cpp  LuaUnsyncedRead.cpp  LuaUnsyncedRead.h  LuaUtils.cpp  LuaUtils.h  LuaVBO.cpp  LuaVBOImpl.cpp
rts/Lua2Cpp/: CMakeLists.txt
rts/Net/: GameServer.h  NetCommands.cpp
rts/Sim/: CMakeLists.txt
rts/System/: CMakeLists.txt  EventClient.h  EventHandler.cpp  EventHandler.h  Events.def  (+3 more)
(+123 files in other folders)
